updated job openings and candidates

--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "mongoose": "8.0.0",
     "next": "14.0.1",
     "next-auth": "5.0.0-beta.3",
+    "quill": "^1.3.7",
     "react": "18",
     "react-dom": "18",
     "react-icons": "4.11.0",
     "react-phone-number-input": "^3.3.7",
     "react-quill": "^2.0.0",
     "recharts": "2.9.0",
+    "slate": "^0.101.5",
+    "slate-react": "^0.101.5",
     "use-debounce": "9.0.4",
     "uuid": "^9.0.1"
   },
