More features added to interviews

--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
     "quill": "^1.3.7",
     "react": "18",
     "react-dom": "18",
+    "react-dropzone": "^14.2.3",
     "react-icons": "4.11.0",
     "react-phone-number-input": "^3.3.7",
     "react-quill": "^2.0.0",
+    "react-select": "^5.8.0",
+    "react-toastify": "^9.1.3",
     "recharts": "2.9.0",
     "slate": "^0.101.5",
     "slate-react": "^0.101.5",
+    "socket.io": "^4.7.3",
     "use-debounce": "9.0.4",
     "uuid": "^9.0.1"
   },
